# mymath

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test_mymath.py
src/: mymath.cpp
